--- a/styles/global.css
+++ b/styles/global.css
@@ -35,6 +35,20 @@ a:hover {
     color: var(--brand-color-light);
 }
 
+.container {
+    max-width: 1280px;
+    padding-inline: 32px;
+    margin-inline: auto;
+}
+
 h1, h2, h3 {
     font: inherit;
+}
+
+.grid {
+    display: grid;
+}
+
+.grid-flow-col {
+    grid-auto-flow: column;
 }
