adding main section images

--- a/styles/global.css
+++ b/styles/global.css
@@ -41,14 +41,14 @@ a:hover {
     margin-inline: auto;
 }
 
+main {
+    margin-top: 40px;
+}
+
+img {
+    max-width: 100%;
+}
+
 h1, h2, h3 {
     font: inherit;
-}
-
-.grid {
-    display: grid;
-}
-
-.grid-flow-col {
-    grid-auto-flow: column;
 }
