--- a/styles/sections.css
+++ b/styles/sections.css
@@ -25,6 +25,9 @@
         position: absolute;
         bottom: 0;
         padding: 24px;
+        &:has(.text-lg) {
+            padding: 12px;
+        }
 
         h2 {
             margin-top: 8px;
