styling the final sections

--- a/styles/global.css
+++ b/styles/global.css
@@ -42,8 +42,16 @@ a:hover {
 }
 
 main {
-    margin-top: 40px;
-    gap: 80px;
+    margin-block: 40px;
+    row-gap: 80px;
+    column-gap: 32px;
+
+    grid-template-columns: 2fr 1fr;
+
+    grid-template-areas: 
+    "featured featured"
+    "weekly weekly"
+    "ai aside";
 }
 
 img {
