--- a/styles/sections.css
+++ b/styles/sections.css
@@ -21,6 +21,7 @@ section header {
 }
 
 #featured {
+    grid-area: featured;
     img {
         height: 100%;
         object-fit: cover;
@@ -58,6 +59,7 @@ section header {
 }
 
 #weekly {
+    grid-area: weekly;
     &>div {
         grid-template-columns: repeat(4, 292px);
     }
@@ -80,4 +82,36 @@ section header {
             font-weight: 800;
         }
     }
+}
+
+#ai {
+    grid-area: ai;
+    img {
+        width: 176px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3 {
+        margin-block: 8px 4px;
+    }
+}
+
+#more {
+    margin-top: 32px;
+
+    h3{
+        margin-top: 8px;
+    }
+
+    img {
+        width: 72px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+
+    }
+}
+
+aside {
+    grid-area: aside;
 }
